--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 
 
 script:
-    - docker run -e CI=true devchuksemeka/react-test npm test -- ---coverage
+    - docker run -e CI=true devchuksemeka/react-test npm test -- --coverage
 
 after_success:
     - docker build -t devchuksemeka/multi-client ./client
